force-app/main/default/objects/Product2/fields/FOPS_Aliases__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Aliases__c</fullName>
    <inlineHelpText>LWC, lightning web component, lwc - used by the JD parser to match.</inlineHelpText>
    <label>Aliases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>