force-app/main/default/objects/Product2/fields/FOPS_Average_Rate_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Average_Rate_Base__c</fullName>
    <label>Average Rate (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>