force-app/main/default/objects/Product2/fields/FOPS_Focus_Score__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Focus_Score__c</fullName>
    <inlineHelpText>Demand + rate premium + personal gap. Ranks what to learn next.</inlineHelpText>
    <label>Focus Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>