force-app/main/default/objects/Product2/fields/FOPS_Market_Demand_Score__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Market_Demand_Score__c</fullName>
    <inlineHelpText>Rolling 12-month JD frequency. Refreshed weekly.</inlineHelpText>
    <label>Market Demand Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>