force-app/main/default/objects/Product2/fields/FOPS_Skill_Category__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Skill_Category__c</fullName>
    <label>Skill Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Core</fullName>
            </value>
            <value>
                <fullName>Salesforce Industry</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Frontend</fullName>
            </value>
            <value>
                <fullName>Backend</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>AI / Agentforce</fullName>
            </value>
            <value>
                <fullName>Soft Skill</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>